initial support for association edges in config + template file

--- a/models/node.tmpl
+++ b/models/node.tmpl
@@ -83,6 +83,19 @@ func GenLoad{{.Node}}(id string, chan{{.NodeResult}} chan<- {{.NodeResult}}) {
           }
         }
       {{end}}
+      {{if $edgeInfo.AssociationEdge -}}
+        func ({{$currentNodeInstance}} *{{$currentNode}}) Get{{$edgeName}}Edges() ([]Edge, error) {
+          // TODO don't hardcode edge
+          return models.LoadEdgesByType({{$currentNodeInstance}}.ID, UserToNotesEdge)
+        }
+
+        func ({{$currentNodeInstance}} *{{$currentNode}}) Get{{$edgeName}}s() ({{.NodesSlice}}, error) {
+          var {{.NodeInstance}}s {{.NodesSlice}}
+          err := models.LoadNodesByType({{$currentNodeInstance}}.ID, UserToNotesEdge, &{{.NodeInstance}}s)
+          return {{.NodeInstance}}s, err
+        }
+
+      {{end}}
      
     {{end}}
   {{end}}
