--- a/models/node.tmpl
+++ b/models/node.tmpl
@@ -84,14 +84,19 @@ func GenLoad{{.Node}}(id string, chan{{.NodeResult}} chan<- {{.NodeResult}}) {
         }
       {{end}}
       {{if $edgeInfo.AssociationEdge -}}
-        func ({{$currentNodeInstance}} *{{$currentNode}}) Get{{$edgeName}}Edges() ([]Edge, error) {
-          return models.LoadEdgesByType({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}})
+        func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}Edges(chanEdgesResult chan<- models.EdgesResult) {
+          go models.GenLoadEdgesByTypeResult({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}}, chanEdgesResult)
         }
 
-        func ({{$currentNodeInstance}} *{{$currentNode}}) Get{{$edgeName}}() ({{.NodesSlice}}, error) {
+        func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}(chan{{.NodeResult}} chan<- {{.NodeResult}}) {
           var {{.NodeInstance}}s {{.NodesSlice}}
-          err := models.LoadNodesByType({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}}, &{{.NodeInstance}}s)
-          return {{.NodeInstance}}s, err
+          chanErr := make(chan error)
+          go models.GenLoadNodesByType({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}}, &{{.NodeInstance}}s, chanErr)
+          err := <-chanErr
+          chan{{.NodeResult}}s <- {{.NodeResult}}{
+            {{.Nodes}}: {{.NodeInstance}}s,
+            Error: err,
+          }
         }
 
       {{end}}
