fix GenLoad*** methods

--- a/models/node.tmpl
+++ b/models/node.tmpl
@@ -75,7 +75,7 @@ func GenLoad{{.Node}}(id string, chan{{.NodeResult}} chan<- {{.NodeResult}}) {
         func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}(chan{{.NodeResult}} chan<- {{.NodeResult}}) {
           var {{.NodeInstance}}s {{.NodesSlice}}
           chanErr := make(chan error)
-          go models.GenLoadNodes({{$currentNodeInstance}}.ID, &{{.NodeInstance}}s, "{{$currentPackageName}}_id", "{{.PackageName}}s")
+          go models.GenLoadNodes({{$currentNodeInstance}}.ID, &{{.NodeInstance}}s, "{{$currentPackageName}}_id", "{{.PackageName}}s", chanErr)
           err := <-chanErr
           chan{{.NodeResult}}s <- {{.NodeResult}}{
             {{.Nodes}}: {{.NodeInstance}}s,
