move framework from models -> ent

--- a/ent/constants.tmpl
+++ b/ent/constants.tmpl
@@ -1,10 +1,10 @@
 package {{.PackageName}}
 
 import (
-  "github.com/lolopinto/jarvis/models"
+  "github.com/lolopinto/jarvis/ent"
 )
 
 const (
   // {{.NodeType}} uniquely identifies this object as an owner of something else
-  {{.NodeType}} models.NodeType = "{{.NodeInstance}}"
+  {{.NodeType}} ent.NodeType = "{{.NodeInstance}}"
 )
