--- a/ent/node.tmpl
+++ b/ent/node.tmpl
@@ -1,12 +1,12 @@
 package {{.PackageName}}
 
 import (
-  "github.com/lolopinto/jarvis/models"
+  "github.com/lolopinto/jarvis/ent"
 )
 
 // {{.Node}} represents the `{{.Node}}` model 
 type {{.Node}} struct {
-  models.Node
+  ent.Node
   {{with .Fields -}}
     {{ range . -}} 
       {{.FieldName}} {{.FieldType}} {{.FieldTag}}
@@ -33,14 +33,14 @@ type {{.NodesResult}} struct {
 func ({{.NodeInstance}} {{.Node}}) isNode() {}
 
 // GetType returns the NodeType of this entity. In this case: ContactType
-func ({{.NodeInstance}} *{{.Node}}) GetType() models.NodeType {
+func ({{.NodeInstance}} *{{.Node}}) GetType() ent.NodeType {
 	return {{.NodeType}}
 }
 
 // Load{{.Node}} loads the given {{.Node}} given the id
 func Load{{.Node}}(id string) ({{.Node}}, error) {
   var {{.NodeInstance}} {{.Node}}
-  err := models.LoadNode(id, &{{.NodeInstance}}, "{{.TableName}}")
+  err := ent.LoadNode(id, &{{.NodeInstance}}, "{{.TableName}}")
   return {{.NodeInstance}}, err
 }
 
@@ -48,7 +48,7 @@ func Load{{.Node}}(id string) ({{.Node}}, error) {
 func GenLoad{{.Node}}(id string, chan{{.NodeResult}} chan<- {{.NodeResult}}) {
   var {{.NodeInstance}} {{.Node}}
   chanErr := make(chan error)
-  go models.GenLoadNode(id, &{{.NodeInstance}}, "{{.TableName}}", chanErr)
+  go ent.GenLoadNode(id, &{{.NodeInstance}}, "{{.TableName}}", chanErr)
   err := <-chanErr
   chan{{.NodeResult}} <- {{.NodeResult}}{
     {{.Node}}: {{.NodeInstance}},
@@ -75,7 +75,7 @@ func GenLoad{{.Node}}(id string, chan{{.NodeResult}} chan<- {{.NodeResult}}) {
         func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}(chan{{.NodeResult}} chan<- {{.NodeResult}}) {
           var {{.NodeInstance}}s {{.NodesSlice}}
           chanErr := make(chan error)
-          go models.GenLoadNodes({{$currentNodeInstance}}.ID, &{{.NodeInstance}}s, "{{$currentPackageName}}_id", "{{.PackageName}}s", chanErr)
+          go ent.GenLoadNodes({{$currentNodeInstance}}.ID, &{{.NodeInstance}}s, "{{$currentPackageName}}_id", "{{.PackageName}}s", chanErr)
           err := <-chanErr
           chan{{.NodeResult}}s <- {{.NodeResult}}{
             {{.Nodes}}: {{.NodeInstance}}s,
@@ -84,14 +84,14 @@ func GenLoad{{.Node}}(id string, chan{{.NodeResult}} chan<- {{.NodeResult}}) {
         }
       {{end}}
       {{if $edgeInfo.AssociationEdge -}}
-        func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}Edges(chanEdgesResult chan<- models.EdgesResult) {
-          go models.GenLoadEdgesByTypeResult({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}}, chanEdgesResult)
+        func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}Edges(chanEdgesResult chan<- ent.EdgesResult) {
+          go ent.GenLoadEdgesByTypeResult({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}}, chanEdgesResult)
         }
 
         func ({{$currentNodeInstance}} *{{$currentNode}}) Gen{{$edgeName}}(chan{{.NodeResult}} chan<- {{.NodeResult}}) {
           var {{.NodeInstance}}s {{.NodesSlice}}
           chanErr := make(chan error)
-          go models.GenLoadNodesByType({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}}, &{{.NodeInstance}}s, chanErr)
+          go ent.GenLoadNodesByType({{$currentNodeInstance}}.ID, {{$edgeInfo.AssociationEdge.EdgeConst}}, &{{.NodeInstance}}s, chanErr)
           err := <-chanErr
           chan{{.NodeResult}}s <- {{.NodeResult}}{
             {{.Nodes}}: {{.NodeInstance}}s,
@@ -107,14 +107,14 @@ func GenLoad{{.Node}}(id string, chan{{.NodeResult}} chan<- {{.NodeResult}}) {
 
 // Update{{.Node}} updates the given {{.Node}} given the id
 func Update{{.Node}}({{.NodeInstance}} {{.Node}}) ({{.Node}}, error) {
-	err := models.UpdateNode(&{{.NodeInstance}}, "{{.TableName}}")
+	err := ent.UpdateNode(&{{.NodeInstance}}, "{{.TableName}}")
 	return {{.NodeInstance}}, err
 }
 
 // Delete{{.Node}} deletes the given {{.Node}} 
 func Delete{{.Node}}({{.NodeInstance}} {{.Node}}) error {
-	return models.DeleteNode(&{{.NodeInstance}}, "{{.TableName}}")
+	return ent.DeleteNode(&{{.NodeInstance}}, "{{.TableName}}")
 }
 
 // Add this to each entity to confirm it implements the interface
-var _ models.Entity = (*{{.Node}})(nil)
+var _ ent.Entity = (*{{.Node}})(nil)
