--- a/ent/mutator.tmpl
+++ b/ent/mutator.tmpl
@@ -3,15 +3,16 @@ package mutator
 import (
   "github.com/lolopinto/jarvis/models"
   "github.com/lolopinto/jarvis/ent"
+	"github.com/lolopinto/jarvis/models/configs"
 )
 
 // Update{{.Node}} updates the given {{.Node}} given the id
 func Update{{.Node}}({{.NodeInstance}} models.{{.Node}}) (models.{{.Node}}, error) {
-	err := ent.UpdateNode(&{{.NodeInstance}}, "{{.TableName}}")
+	err := ent.UpdateNode(&{{.NodeInstance}}, {{.EntConfig}})
 	return {{.NodeInstance}}, err
 }
 
 // Delete{{.Node}} deletes the given {{.Node}} 
 func Delete{{.Node}}({{.NodeInstance}} models.{{.Node}}) error {
-	return ent.DeleteNode(&{{.NodeInstance}}, "{{.TableName}}")
+	return ent.DeleteNode(&{{.NodeInstance}}, {{.EntConfig}})
 }
