add Viewer to ent

--- a/cmd/gent/node.tmpl
+++ b/cmd/gent/node.tmpl
@@ -20,6 +20,7 @@ type {{.Node}} struct {
       {{.FieldName}} {{.FieldType}} {{.FieldTag}}
     {{end -}}
   {{end -}}
+  Viewer viewer.ViewerContext
 }
 
 
