tie all new edge code creation together
this does the following:
* parse existing model files to get existing constants
* gets the list of constants that we should have based on edges in config file and then generates new uuids for any new edges
* writes the new edges to the local assoc_edge_config table (adds support for writing multiple edges to the db at the same time although only "tested" with one)
* changes symmetric column from symmetric to symmetric_edge since symmetric is a reserved kewyord
* changes node.tmpl template to handle generic constants. right now, we only support nodes and edges but we can support more types in the future

--- a/cmd/gent/templates/node.tmpl
+++ b/cmd/gent/templates/node.tmpl
@@ -13,10 +13,18 @@ import (
 {{end -}}
 
 {{with .NodeData -}}
+{{with .ConstantGroups -}}
 const (
-  // {{.NodeType}} uniquely identifies this object as an owner of something else
-  {{.NodeType}} ent.NodeType = "{{.NodeInstance}}"
+  {{ range . -}}
+    {{$constType := .ConstType -}}
+    {{range .Constants -}}
+      // {{.Comment}}
+      {{.ConstName}} {{$constType}} = {{.ConstValue}}
+    {{end}}
+
+  {{end -}}
 )
+{{end -}}
 
 // {{.Node}} represents the `{{.Node}}` model 
 type {{.Node}} struct {
